--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ua-UA"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" type="text/css" href="./src/style.css">
-	<title>Паливні картки і талони | Ukr Oil Group</title>
+	<title>Паливні талони від мереж АЗС ОККО, WOG, KLO та БРСМ | Ukr Oil Group</title>
 	<meta name="robots" content="max-image-preview:large">
 	<meta name="robots" content="index, follow">
 	<meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -35,15 +35,15 @@
 			<nav class="navigation">
 				<div class="mobile-elements"></div>
 				<div class="navigation__inner">
-					<p>Паливні картки і талони від мереж АЗС ОККО, WOG, KLO та БРСМ</p>
-					<a href="tel:+380733256360" class="telephone">
-						<img src="./src/telephone-icon.png" alt="" class="telephone__icon">+38 (073) 325-63-60
+					<p>Паливні талони від мереж АЗС ОККО, WOG, KLO та БРСМ</p>
+					<a href="tel:+380634693269" class="telephone">
+						<img src="./src/telephone-icon.png" alt="" class="telephone__icon">+38 (063) 469-32-69
 					</a>
 				</div>
 			</nav>
 			<div class="mobile-navigation">
-				<a href="tel:+380733256360" class="telephone">
-					<img src="./src/telephone-icon.png" alt="" class="telephone__icon">+38 (073) 325-63-60
+				<a href="tel:+380634693269" class="telephone">
+					<img src="./src/telephone-icon.png" alt="" class="telephone__icon">+38 (063) 469-32-69
 				</a>
 			</div>
 		</div>
@@ -52,7 +52,7 @@
 </header>
 			<div class="fullscreen__container">
 				<p>ПАЛЬНЕ Є!</p>
-				<p>ПАЛИВНІ КАРТКИ ТА ТАЛОНИ НОМІНАЛОМ 100, 500, 1000 ЛІТРІВ</p>
+				<p>ПАЛИВНІ ТАЛОНИ З ІНДИВІДУАЛЬНИМИ НОМІНАЛАМИ ВІД 100 ЛІТРІВ</p>
 			</div>
 
 </main>
@@ -118,9 +118,8 @@
                         <h3 class="services-section__title">
                                                             ПАЛЬНЕ
                                                     </h3>
-                        <p class="services-section__text">Ми, як компанія UKR OIL GROUP на ринку нафтових продуктів уже понад 10 років і реалізуємо талони та смарт-картки від таких АЗС як OKKO, WOG, SOCAR, KLO та БРСМ по всій Україні.
+                        <p class="services-section__text">Ми, як компанія UKR OIL GROUP на ринку нафтових продуктів уже понад 10 років і реалізуємо талони від таких АЗС як OKKO, WOG, SOCAR, KLO та БРСМ по всій Україні.
 </p>
-
                     </div>
                 </div>
                 <div class="col-12">
@@ -181,7 +180,7 @@
                 <div class="col-lg-11">
                     <div class="row">
                                                                         <div class="col-12 col-lg-6 d-flex">
-                            <article class="article">
+                           <!-- <article class="article">
                                 <div class="article__top">
                                     <div class="acricle__icon">
                                         <picture>
@@ -193,9 +192,9 @@
                                     <h5 class="article__title">Паливні картки</h5>
                                     <div class="article__text">Які переваги паливаної картки? Зберігайте вільні кошти на загальному рахунку, налаштовуйте кожну картку індивідуально (літри, гривні, дні, години використання), блокуйте та розблоковуйте картки он-лайн, змінюйте pin-код на більш зручний, слідкуйте за використанням коштів і легко формуйте звітність</div>
                                                                     </div>
-                            </article>
+                            </article>-->
                         </div>
-                                                                        <div class="col-12 col-lg-6 d-flex">
+                                                                        <div class="col-12 col-lg-12 d-flex">
                             <article class="article">
                                 <div class="article__top">
                                     <div class="acricle__icon">
@@ -207,7 +206,7 @@
                                 <div class="article__description">
                                     <h5 class="article__title">ПАЛИВНІ
 ТАЛОНИ</h5>
-                                    <div class="article__text">Талони — простий, зручний та надійний спосіб безготівкового розрахунку за пальне. Талонами можуть користуватися юридичні та приватні особи. Придбати талони можна за готівку або ж по безготівковому розрахунку. <br><br>Наявні номінали — 100, 500 та 1000 літрів</div>
+                                    <div class="article__text">Талони — простий, зручний та надійний спосіб безготівкового розрахунку за пальне. Талонами можуть користуватися юридичні та приватні особи. Придбати талони можна за готівку або ж по безготівковому розрахунку. <br></div>
                                                                     </div>
                             </article>
                         </div>
@@ -225,7 +224,7 @@
 		<div class="row justify-content-center">
 			<div class="col-lg-4 footer__column-contacts">
 				<div class="footer__contacts">
-                    <p><a class="footer__link" href="tel:380733256360">+38 (073) 325-63-60</a></p>
+                    <p><a class="footer__link" href="tel:+380634693269">+38 (063) 469-32-69</a></p>
 <p>Юридична адреса: м. Лубни, улица Старотроїцька 1</p>
 <p><a class="footer__link" href="mailto:ukroilgroupbusiness@gmail.com
 ">ukroilgroupbusiness@gmail.com
