--- a/eurogas.html
+++ b/eurogas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ua-UA"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" type="text/css" href="./src/style.css">
-	<title>Паливні картки і талони | Ukr Oil Group</title>
+	<title>Паливні талони від мереж АЗС ОККО, WOG, KLO та БРСМ | Ukr Oil Group</title>
 	<meta name="robots" content="max-image-preview:large">
 	<meta name="robots" content="index, follow">
 	<meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -35,15 +35,15 @@
 			<nav class="navigation">
 				<div class="mobile-elements"></div>
 				<div class="navigation__inner">
-					<p>Паливні картки і талони від мереж АЗС ОККО, WOG, KLO та БРСМ</p>
-					<a href="tel:+380733256360" class="telephone">
-						<img src="./src/telephone-icon.png" alt="" class="telephone__icon">+38 (073) 325-63-60
+					<p>Паливні талони від мереж АЗС ОККО, WOG, KLO та БРСМ</p>
+					<a href="tel:+380634693269" class="telephone">
+						<img src="./src/telephone-icon.png" alt="" class="telephone__icon">+38 (063) 469-32-69
 					</a>
 				</div>
 			</nav>
 			<div class="mobile-navigation">
-				<a href="tel:+380733256360" class="telephone">
-					<img src="./src/telephone-icon.png" alt="" class="telephone__icon">+38 (073) 325-63-60
+				<a href="tel:+380634693269" class="telephone">
+					<img src="./src/telephone-icon.png" alt="" class="telephone__icon">+38 (063) 469-32-69
 				</a>
 			</div>
 		</div>
@@ -52,7 +52,7 @@
 </header>
 			<div class="fullscreen__container">
 				<p>ПАЛЬНЕ Є!</p>
-				<p>ПАЛИВНІ КАРТКИ ТА ТАЛОНИ НОМІНАЛОМ 100, 500, 1000 ЛІТРІВ</p>
+				<p>ПАЛИВНІ ТАЛОНИ З ІНДИВІДУАЛЬНИМИ НОМІНАЛАМИ ВІД 100 ЛІТРІВ</p>
 			</div>
 
 </main>
@@ -118,7 +118,7 @@
                         <h3 class="services-section__title">
                                                             ПАЛЬНЕ
                                                     </h3>
-                        <p class="services-section__text">Ми, як компанія UKR OIL GROUP на ринку нафтових продуктів уже понад 10 років і реалізуємо талони та смарт-картки від таких АЗС як OKKO, WOG, SOCAR, KLO та БРСМ по всій Україні.
+                        <p class="services-section__text">Ми, як компанія UKR OIL GROUP на ринку нафтових продуктів уже понад 10 років і реалізуємо талони від таких АЗС як OKKO, WOG, SOCAR, KLO та БРСМ по всій Україні.
 </p>
 
                     </div>
@@ -181,7 +181,7 @@
                 <div class="col-lg-11">
                     <div class="row">
                                                                         <div class="col-12 col-lg-6 d-flex">
-                            <article class="article">
+                            <!-- <article class="article">
                                 <div class="article__top">
                                     <div class="acricle__icon">
                                         <picture>
@@ -193,10 +193,10 @@
                                     <h5 class="article__title">Паливні картки</h5>
                                     <div class="article__text">Які переваги паливаної картки? Зберігайте вільні кошти на загальному рахунку, налаштовуйте кожну картку індивідуально (літри, гривні, дні, години використання), блокуйте та розблоковуйте картки он-лайн, змінюйте pin-код на більш зручний, слідкуйте за використанням коштів і легко формуйте звітність</div>
                                                                     </div>
-                            </article>
+                            </article>-->
                         </div>
-                                                                        <div class="col-12 col-lg-6 d-flex">
-                            <article class="article">
+                                                                        <div class="col-12 col-lg-12 d-flex">
+                           <article class="article">
                                 <div class="article__top">
                                     <div class="acricle__icon">
                                         <picture>
@@ -207,7 +207,7 @@
                                 <div class="article__description">
                                     <h5 class="article__title">ПАЛИВНІ
 ТАЛОНИ</h5>
-                                    <div class="article__text">Талони — простий, зручний та надійний спосіб безготівкового розрахунку за пальне. Талонами можуть користуватися юридичні та приватні особи. Придбати талони можна за готівку або ж по безготівковому розрахунку. <br><br>Наявні номінали — 100, 500 та 1000 літрів</div>
+                                    <div class="article__text">Талони — простий, зручний та надійний спосіб безготівкового розрахунку за пальне. Талонами можуть користуватися юридичні та приватні особи. Придбати талони можна за готівку або ж по безготівковому розрахунку. <br></div>
                                                                     </div>
                             </article>
                         </div>
@@ -225,7 +225,7 @@
 		<div class="row justify-content-center">
 			<div class="col-lg-4 footer__column-contacts">
 				<div class="footer__contacts">
-                    <p><a class="footer__link" href="tel:380733256360">+38 (073) 325-63-60</a></p>
+                    <p><a class="footer__link" href="tel:+380634693269">+38 (063) 469-32-69</a></p>
 <p>Юридична адреса: м. Лубни, улица Старотроїцька 1</p>
 <p><a class="footer__link" href="mailto:ukroilgroupbusiness@gmail.com
 ">ukroilgroupbusiness@gmail.com
@@ -257,7 +257,7 @@
 				<select name="pricecoef" id="pricecoef_95" hidden>
 				</select>
 				<legend>
-					Мінімальна кількість 100 літрів. <br>На кожні 500 грн надаємо 1 грн знижки.
+					Мінімальна кількість 100 літрів. <br>Від 500 літрів знижка 1 грн на кожен літр.<br>Від 1000 літрів — 2 грн.
 				</legend>
 				<input name="gasquan" id=i1_95 onchange=f_95() placeholder="Введіть кількість літрів" required>
 				<input type="text" name="firstName" placeholder="Ім'я" required>
@@ -276,19 +276,12 @@
 </div>
 
 <script type="text/javascript">
+	$('.popup__content').css('min-height', '50px')
+	$('.popup__content').css('position', 'relative')
+	$('.popup__content').css('overflow', 'auto')
    jQuery(function($){
    $("#tel, #tel2").mask("+38 (999) 999 - 9999");
    });
-</script>
-
-<script type="text/javascript">
-   jQuery(function($){
-   $('#i1_95').mask('999').on('click', function () {
-    if ($(this).val() === '___') {
-        $(this).get(0).setSelectionRange(0, 0);
-    }
-});
-});
 </script>
 
 <script>
@@ -322,10 +315,21 @@
 </script>
 
 <script>
+	function calcFor(){
+		var n1_95=document.getElementById('i1_95').value;
+		let score = document.getElementById('i1_95').value = (Math.round(n1_95/10)*10);
+		let n2_95=document.getElementById('pricecoef_95').textContent;
+		let n3_95=document.getElementById('i3_95').value=Math.fround(Number(score)*Number(n2_95)/10)*10 + ' ' + 'гривень';
+	}
+
 	function f_95(){
-	var n1_95=document.getElementById('i1_95').value;
-	var n2_95=document.getElementById('pricecoef_95').textContent;
-	var n3_95=document.getElementById('i3_95').value=Math.fround(Number(n1_95)*Number(n2_95)/10)*10 + ' ' + 'гривень';
+		var n1_95=document.getElementById('i1_95').value;
+		if (n1_95 <= 100) {
+			document.getElementById('i1_95').value = 100;
+			calcFor();
+		}else if(n1_95 >= 100){
+			calcFor();
+		}
 	}
 </script>
 
